syntax = "proto3";

package com.sokima.grpc;

option java_multiple_files = true;
option java_package = "com.sokima.grpc.model";

message Credentials {
  oneof mode {
    EmailCredentials email_mode = 1;
    PhoneCredentials phone_mode = 2;
    LoginCredentials login_mode = 3;
  }
}

message EmailCredentials {
  string email = 1;
  string passcode = 2;
}

message PhoneCredentials {
  int32 phone_number = 1;
  int32 code = 2;
}

message LoginCredentials {
  string login = 1;
  string password = 2;
}

